manifests/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relay
  namespace: k8s-platform-lab
  labels:
    app: relay
    component: backend
    version: "1.0.1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: relay
  template:
    metadata:
      labels:
        app: relay
        component: backend
        version: "1.0.1"
    spec:
      serviceAccountName: relay-sa
      containers:
        - name: relay
          image: tronghuy0104/relay:1.0.3
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:           # BẮT BUỘC để HPA hoạt động
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
